--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
             margin: 0 auto;
         }
 
+        /* LOGO - COMMENTATO TEMPORANEAMENTE
         .nav-logo {
             font-weight: 800;
             font-size: 1.5rem;
@@ -288,6 +289,7 @@
             color: transparent;
             text-decoration: none;
         }
+        */
 
         .nav-links {
             display: flex;
@@ -1632,7 +1634,9 @@
     <!-- Navigation -->
     <div class="nav-container">
         <nav>
+            <!-- LOGO - COMMENTATO TEMPORANEAMENTE
             <a href="#" class="nav-logo">MDL</a>
+            -->
             <button class="mobile-menu-btn" id="mobileMenuBtn">
                 <i class="fas fa-bars"></i>
             </button>
