--- a/index.html
+++ b/index.html
@@ -1726,10 +1726,10 @@
                         enti pubblici e privati, avec focus su cybersecurity e innovazione digitale.
                     </p>
                     <div class="skills-list">
-                        <span class="skill-tag">Consulenza IT</span>
-                        <span class="skill-tag">PNRR</span>
-                        <span class="skill-tag">Digitalizzazione</span>
-                        <span class="skill-tag">Cybersecurity</span>
+                        <span class="skill-tag" data-i18n="skills.consulting">Consulenza IT</span>
+                        <span class="skill-tag" data-i18n="skills.pnrr">PNRR</span>
+                        <span class="skill-tag" data-i18n="skills.digitalization">Digitalizzazione</span>
+                        <span class="skill-tag" data-i18n="skills.cybersecurity">Cybersecurity</span>
                     </div>
                 </div>
                 
@@ -1752,7 +1752,7 @@
 
                 <div class="card animate-on-scroll">
                     <h3 data-i18n="experience.job3.title">Sviluppatore Web Freelance</h3>
-                    <h4>2024 - Attuale</h4>
+                    <h4>2024 - <span data-i18n="present">Attuale</span></h4>
                     <p data-i18n="experience.job3.description">
                         Progettazione e sviluppo di siti web personalizzati utilizzando HTML, CSS, JavaScript e WordPress. 
                         Creazione di design responsive ottimizzati per dispositivi mobili, ottimizzazione SEO per migliorare la visibilità online dei clienti.
@@ -1789,14 +1789,14 @@
                     <h4>Università degli Studi del Molise | 2018 - 2023</h4>
                     <p data-i18n="education.edu2.grade">Voto finale: 96/110</p>
                     <ul>
-                        <li>Tesi: "Analisi di vulnerabilità in applicazioni web"</li>
-                        <li>Corsi principali: Programmazione, Database, Reti</li>
+                                            <li><span data-i18n="thesis">Tesi</span>: <span data-i18n="thesis.title">"Analisi di vulnerabilità in applicazioni web"</span></li>
+                    <li><span data-i18n="main.courses">Corsi principali</span>: <span data-i18n="courses.list">Programmazione, Database, Reti</span></li>
                     </ul>
                     <div class="skills-list">
-                        <span class="skill-tag">Programmazione</span>
-                        <span class="skill-tag">Database</span>
-                        <span class="skill-tag">Reti</span>
-                        <span class="skill-tag">Sicurezza Web</span>
+                        <span class="skill-tag" data-i18n="skills.programming">Programmazione</span>
+                        <span class="skill-tag" data-i18n="skills.database">Database</span>
+                        <span class="skill-tag" data-i18n="skills.networks">Reti</span>
+                        <span class="skill-tag" data-i18n="skills.web.security">Sicurezza Web</span>
                     </div>
                 </div>
 
@@ -2084,7 +2084,20 @@
                 'validation.name': 'Il nome deve contenere almeno 2 caratteri.',
                 'validation.email': 'Inserisci un indirizzo email valido.',
                 'validation.subject': 'L\'oggetto deve contenere almeno 3 caratteri.',
-                'validation.message': 'Il messaggio deve contenere almeno 10 caratteri.'
+                'validation.message': 'Il messaggio deve contenere almeno 10 caratteri.',
+                'present': 'Attuale',
+                'thesis': 'Tesi',
+                'thesis.title': '"Analisi di vulnerabilità in applicazioni web"',
+                'main.courses': 'Corsi principali',
+                'courses.list': 'Programmazione, Database, Reti',
+                'skills.consulting': 'Consulenza IT',
+                'skills.pnrr': 'PNRR',
+                'skills.digitalization': 'Digitalizzazione',
+                'skills.cybersecurity': 'Cybersecurity',
+                'skills.programming': 'Programmazione',
+                'skills.database': 'Database',
+                'skills.networks': 'Reti',
+                'skills.web.security': 'Sicurezza Web'
             },
             'en': {
                 'name': 'Marco De Luca',
@@ -2142,7 +2155,20 @@
                 'validation.name': 'The name must contain at least 2 characters.',
                 'validation.email': 'Please enter a valid email address.',
                 'validation.subject': 'The subject must contain at least 3 characters.',
-                'validation.message': 'The message must contain at least 10 characters.'
+                'validation.message': 'The message must contain at least 10 characters.',
+                'present': 'Present',
+                'thesis': 'Thesis',
+                'thesis.title': '"Vulnerability Analysis in Web Applications"',
+                'main.courses': 'Main Courses',
+                'courses.list': 'Programming, Database, Networks',
+                'skills.consulting': 'IT Consulting',
+                'skills.pnrr': 'PNRR',
+                'skills.digitalization': 'Digitalization',
+                'skills.cybersecurity': 'Cybersecurity',
+                'skills.programming': 'Programming',
+                'skills.database': 'Database',
+                'skills.networks': 'Networks',
+                'skills.web.security': 'Web Security'
             }
         };
         
