--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         /* Cards */
         .card-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
             gap: 30px;
             align-items: stretch;
         }
@@ -416,11 +416,16 @@
         }
 
         .card h3 {
-            font-size: 1.4rem;
+            font-size: 1.3rem;
             margin-bottom: 8px;
             color: var(--primary);
             font-weight: 700;
             text-align: center;
+            line-height: 1.3;
+            min-height: 2.6rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .card h4 {
@@ -1402,6 +1407,11 @@
             .card-grid {
                 grid-template-columns: 1fr;
                 gap: 20px;
+            }
+            
+            .card h3 {
+                font-size: 1.2rem;
+                min-height: 2.4rem;
             }
             
             .contact-info {
