--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         /* Cards */
         .card-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             gap: 30px;
             align-items: stretch;
         }
@@ -416,13 +416,13 @@
         }
 
         .card h3 {
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             margin-bottom: 8px;
             color: var(--primary);
             font-weight: 700;
             text-align: center;
             line-height: 1.3;
-            min-height: 2.6rem;
+            min-height: 2.4rem;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -1390,6 +1390,12 @@
         }
 
         /* Responsive */
+
+        @media (min-width: 1200px) {
+            .card-grid {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
 
         @media (max-width: 768px) {
             section {
